# agents-bar-agent

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codacy-analysis.yml  docker.yml  upload-docker-image.yml
app/: main.py  types.py  utils.py
