[metadata]
name = agents-bar-agent
version = 0.0.1
author = Dawid Laszuk
email = dawid@agents.bar

[options]
packages = find:
python_requires = >=3.8
install_requires =
    ai-traineree==0.5.2
    uvicorn>=0.15.0
    requests>=2.26.0
    fastapi>=0.68.0
    pydantic>=1.8.2
    jsons>=1.5.1

[options.extras_require]
dev =
    black~=22.1.0
    isort~=5.10.0
    pycodestyle~=2.8.0
